--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   modules:
     runs-on: ubuntu-latest
-    container: ghcr.io/${{ github.repository_owner }}/gentoo-mipsr5900el:main
+    container: ghcr.io/frno7/gentoo-mipsr5900el:main
     steps:
       - uses: actions/checkout@v3
 
